test using canvas

--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Gam Test</h1>
-    <main>
-        <span id="dude">X</span>
-    </main>
-    <section id="controller">
-        <button id="butt-up">Up</button>
-        <button id="butt-right">Right</button>
-        <button id="butt-down">Down</button>
-        <button id="butt-left">Left</button>
-    </section>
-
+    <canvas id="test"></canvas>
     <script src="js/main.js"></script>
 </body>
 </html>
