revert modules change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <canvas id="test"></canvas>
-    <script type="module" src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
